--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-oauth2": "^1.7.0"
   }
 }
