--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,9 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "nodemon": "^2.0.22",
-    "passport": "^0.6.0",
+    "passport": "^0.5.3",
     "passport-google-oauth2": "^0.2.0",
     "passport-oauth2": "^1.7.0"
   }
